--- a/src/home/home/home.css
+++ b/src/home/home/home.css
@@ -48,6 +48,7 @@
     animation: blinking 1s infinite;
 
 }
+
 .home .left h1,
 .home .left h1 span{
     color: #fff;
@@ -56,7 +57,14 @@
     font-size: 90px;
     margin-bottom: 30px;
 }
-
+.home .left h1 span{
+    display: inline-block;
+    transition: transform .5ms;
+    margin-bottom: 0;
+}
+.home .left h1 span:hover{
+    transform: scale(1.1);
+}
 .home .left p{
     color: #fff;
     font-family: "Inter",system-ui;
@@ -194,16 +202,23 @@
     .home .left{
         order: 2;
         margin-bottom: 80px;
+        overflow: hidden;
+        max-width: 100dvw;
     }
     .home .left h6{
        margin-top: 20px;
         margin-left: 60px;
     }
+    .home .left h1 .nbsp{
+        display: none;
+    }
     .home .left h1{
         width: 100%;
-        display: flex;
-        flex-direction: column;
-        padding: 0 60px;
+        display: grid;
+        width: max-content;
+        grid-template-columns: repeat(6,auto);
+        /* flex-direction: column; */
+        padding: 0 45px;
     }
     .home .left h1 span{
         font-size: 60px;
