--- a/src/navbar/navbar.css
+++ b/src/navbar/navbar.css
@@ -14,6 +14,7 @@ header{
     /* background-color: var(--bg-color); */
     z-index: 100;
     transition: top 1s;
+    /* border-bottom: 1px solid darkslategray; */
 }
 /* this is the class while it should hide the navbar */
 .header{
@@ -52,7 +53,8 @@ header nav button{
     border: none;
     text-decoration: none;
     stroke: #00c6cf;
-    background: linear-gradient(to right,#00c6cf,#d3fbd8);
+    /* background: linear-gradient(to right,#00c6cf,#d3fbd8); */
+    background: linear-gradient(to left, #faf7ff, #978688);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     display: flex;
@@ -67,18 +69,18 @@ header nav button{
 }
 header nav button svg{
     width: 20px;
-    stroke: #00c6cf;
+    stroke: #faf7ff;
     transform: translateX(-40px);
     opacity: 0;
     transition: transform .3s,margin-right .3s, opacity .4s;
 }
 header nav .active{
-    background: linear-gradient(to right,#A44F91,#FFA364);
+    background: linear-gradient(to right,#f5b061,#f5b061);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     svg{
         opacity: 1;
-        stroke: #F57578;
+        stroke: #f5b061;
         transform: translateX(0);
     }
 }
@@ -120,16 +122,16 @@ header nav .active:has(div):hover::before{
     /* transform: translateX(150%); */
     animation: fadeIn .3s;
 }
-header nav button:hover::after,
+/* header nav button:hover::after,
 header nav button:focus::after{
     transform: translateX(0);
     width: calc(100% - 35px);
     background: linear-gradient(to left,#00c6cf,#068488);
-}
+} */
 header nav .active::after{
     transform: translateX(0);
     width: calc(100% - 35px);
-    background: linear-gradient(to left,#A44F91,#FFA364);
+    background: linear-gradient(to left,#f5b061,#FFA364);
 }
 
 @keyframes navbar-drop {
@@ -285,9 +287,10 @@ header nav button nav{
     position: absolute;
     top: 100%;
     left: -10px;
-    background-color: #8a8a8a;
+    background-color: #ffffff;
     display: grid;
     display: none;
+    animation: fadeIn 1s;
     grid-template-columns: repeat(3,1fr);
     padding: 15px 25px;
     row-gap: 20px;
@@ -301,8 +304,8 @@ header .resume{
     background-color: transparent;
     /* border: 1px solid var(--text-color);
     color: var(--text-color); */
-    border: 1px solid #00c6cf;
-    color: #00c6cf;
+    border: 1px solid #f5b061;
+    color: #f5b061;
     border-radius: 6px;
     padding: 10px 20px;
     font-size: 14px;
@@ -321,7 +324,7 @@ header .resume::after{
 header .resume span{
     font-family: "Inter",system-ui;
     transform: translateX(-10px);
-    transition: transform .9s;
+    transition: transform .3s;
 
 }
 header .resume svg{
@@ -329,7 +332,7 @@ header .resume svg{
     width: 20px;
     stroke-width: 2px;
     transform: translateX(-95px);
-    transition: transform 1.1s;
+    transition: transform .3s;
 }
 
 header .resume:hover{
@@ -341,10 +344,9 @@ header .resume:hover{
         transform: translateX(95px);
         stroke: var(--bg-color);
     }
-    background-color: #00c6cf;
+    background-color: #f5b061;
     /* background-color: var(--text-color); */
     color: var(--bg-color);
-    border-color: var(--bg-color);
 }
 
 @keyframes expander {
